--- a/ejem3/pom.xml
+++ b/ejem3/pom.xml
@@ -41,12 +41,12 @@
     <repository>
       <id>archiva.internal</id>
       <name>Internal Release Repository</name>
-      <url>http://localhost:8081/repository/internal/</url>
+      <url>http://${archivaIp}:8081/repository/internal/</url>
     </repository>
     <snapshotRepository>
       <id>archiva.snapshots</id>
       <name>Internal Snapshot Repository</name>
-      <url>http://localhost:8081/repository/snapshots/</url>
+      <url>http://${archivaIp}:8081/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
